--- a/index.html
+++ b/index.html
@@ -17,16 +17,36 @@
         <h1>First Code</h1>
         <h2>Diseño y desarrollo web</h2>
     </div>
-    <div class="row" id="section-1">
-        <p>1</p>
+    <div class="row relleno-lateral" id="section-1">
+        <div class="column-1">
+            <h3>PROYECTO</h3>
+        </div>
+        <div class="gallery">
+            <img src="img/gato.jpg" alt="gato trucoo">
+        </div>
+        <div class="gallery">
+            <img src="img/gato.jpg" alt="gato trucoo">
+        </div>
+        <div class="gallery">
+            <img src="img/gato.jpg" alt="gato trucoo">
+        </div>
+        <div class="gallery">
+            <img src="img/gato.jpg" alt="gato trucoo">
+        </div>
+        <div class="gallery">
+            <img src="img/gato.jpg" alt="gato trucoo">
+        </div>
+        <div class="gallery">
+            <img src="img/gato.jpg" alt="gato trucoo">
+        </div>
     </div>
-    <div class="row" id="section-2">
+    <div class="row relleno-lateral" id="section-2">
         <div class="column-1">
             <h1>¡DANOS TU FEEDBACK!</h1>
             <h2>Es muy importante para nosotros recibir tus críticas y sugerencias</h2>
         </div>
     </div>
-    <div class="row" id="section-3">
+    <div class="row relleno-lateral" id="section-3">
         <div class="column-2">
             <h1>Sobre el proyecto</h1>
             <p>¡La innovación del mañana viene del aprendizaje del ahora!</p>
@@ -42,7 +62,7 @@
                 allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
-    <div class="row" id="section-4">
+    <div class="row relleno-lateral" id="section-4">
         <div class="column-2">
             <h4>!Hechó en Barcelona con corazón y mucho café¡</h4>
         </div>
@@ -58,8 +78,10 @@
         </div>
 
     </div>
-    <div class="row" id="section-5">
-        <p>2020-2021</p>
+    <div class="row relleno-lateral" id="section-5">
+        <div class="column-1">
+            <p>2020-2021</p>
+        </div>
 
     </div>
 </body>
